- Paranoia commit. Working on getting some layout issues finalized
git-svn-id: http://semicomplete.googlecode.com/svn@392 66067f73-fe4c-0410-82e9-b9c6d0c95a22

--- a/xmlpresenter/presenter.css
+++ b/xmlpresenter/presenter.css
@@ -2,11 +2,13 @@ body {
 	margin: 0px;
 	padding: 0px;
 	height: 100%;
+	width: 100%;
 }
 
 .slide {
 	border: 1px solid black;
 	height: 100%;
+	width: 100%;
 	padding: 5px;
 }
 
@@ -22,6 +24,6 @@ pre.code {
 	margin-left: 15px;
 	margin-right: 15px;
 	padding: 3px;
+	overflow: auto;
+	height: auto;
 }
-
-
